@@ -94,6 +94,7 @@ namespace bt
 		virtual Uint64 bytesUploaded() const;
 		virtual Uint64 bytesLeft() const;
 		virtual const SHA1Hash & infoHash() const;
+		virtual bool isPartialSeed() const;
 		
 	private:
 		MagnetLink mlink;
